# repo_template

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_FLYBOT.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: ai_usage_and_data_handling.md  compounding_engineering.md  definition_of_done.md  pr_phase3_baseline_evaluation.md  prompt_library.md  review_comment_harvest.md
eval/: README.md  dataset.py  evaluate_baseline.py  metrics.py
eval/data/: baseline_eval_dataset.json
eval/results/: baseline_eval_results.json
frontend/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.test.ts  client.ts  hooks.ts
frontend/src/types/: api.ts
specs/: 000-example_delay_risk.md  001-dev_demo_data_mode.md  002-frontend_ux.md  DATA_SCHEMA.md  DESIGN_DOC.md  FEATURE_SPEC_TEMPLATE.md  PRD_SPEC.md  TASK_LIST.md
src/flybot/: api.py  baseline.py  clients.py  devdata.py  logging.py  metrics.py  predict.py  schemas.py  scoring.py  service.py
src/project_name/: schema.py
tests/: test_clamp.py  test_contract.py  test_determinism.py  test_metrics.py
tests/contract/: test_schemas.py
tests/integration/: test_api.py  test_demo_mode.py
tests/unit/: test_baseline.py  test_logging.py  test_metrics.py  test_observability.py  test_outbound_bonus.py  test_ranking.py  test_reason_codes.py  test_return_aggregation.py  test_return_buffer.py  test_return_eligibility.py  test_seats_required.py  test_trip_score.py
(+5 files in other folders)
